@@ -1,3 +1,8 @@
+2018-06-22  Tom Tromey  <tom@tromey.com>
+
+	PR symtab/23331:
+	* dwarf2read.c (partial_die_info::read): Handle DW_AT_ranges.
+
 2018-06-22  Alan Hayward  <alan.hayward@arm.com>
 
 	* regcache.c (readable_regcache::read_part): Fix asserts.
